[package]
name = "isc-dhcp-cli"
version = "0.2.1"
edition = "2018"

[[bin]]
name = "dhcpctl"
path = "src/bin.rs"



[dependencies]
prettytable-rs = "0.8.0"
reqwest = { version = "0.11.4", features = ["json"] }
tokio = { version = "1.11.0", features = ["full"] }
serde_json = "1.0.66"
serde = { version = "1.0.127", features = ["derive"] }
structopt = "0.3.22"
colored = "2.0.0"
openssl = { version = "0.10.36", features = ["vendored"] }
cidr = "0.2.0"
cidr-utils = "0.5.4"
chrono = "0.4.19"
futures = "0.3.21"

[dependencies.confy]
version = "0.4.0"
features = ["yaml_conf"]
default-features = false

[patch.crates-io]
confy = { git = 'https://github.com/rust-cli/confy' }

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
